1999-03-25  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-canvas.c (emit_event): Remember the item's parent before
	emitting the event signal, because the item may be destroyed
	during emission.  This fixes an Important Bug(tm).

1999-03-24  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-popup-menu.c (gnome_popup_menu_new): Unref the accel group
	instead of attaching it.
	(gnome_popup_menu_new_with_accelgroup): Check that the accelgroup
	is not NULL.  Also, set the accelgroup once we create the menu.
	(gnome_popup_menu_get_accel_group): Fetch the accelgroup
	correctly.
	This whole patch is courtesy of Tim Janik (timj@gimp.org).

Tue Mar 23 19:33:52 1999  George Lebl  <jirka@5z.com>

	* gnome-font-selector.c: stuff that got allocated with g_malloc needs
	  to be g_free'd and vice versa

1999-03-24  Felix Bellaby <felix@pooh.u-net.com>
	
	* gnome-client.c (gnome_client_request_save): confirm before logout.
	(gnome_client_save_dialog_show): show window before setting hints.
	Tidy up runtime warnings in various functions.	

1999-03-22  Pavel Machek  <pavel@ucw.cz>

	* gnome-winhints.c (gnome_win_hints_init): g_return_if_fails()
	added to make core more robust

Sun Mar 21 01:01:48 1999  George Lebl  <jirka@5z.com>

	* gnome-{icon,pixmap,number}-entry.c: added argument checks everywhere
	  and the destroy signal is void

	* gnome-pixmap-entry.c: on destroy, null the last_preview, just in
	  case

	* gnome-icon-item.c: (gnome_icon_text_item_configure) if the text is
	  static, cast it to (char *) to avoid warning, but this is somewhat
	  evil, so should it or should it not be const in the first place

	* gnome-pixmap.c: added some argument checks and in size_request,
	  setting the requisition of the widget directly is wrong I guess,
	  plus it's redundant

	* gtkdial.c: comment warning fix

	* winhints_demo.c: changed () to (void) to avoid warnings

1999-03-18  Federico Mena Quintero  <federico@nuclecu.unam.mx>
