@@ -1,5 +1,9 @@
 1999-03-25  Federico Mena Quintero  <federico@nuclecu.unam.mx>
 
+	* gnome-canvas.c (emit_event): Ref/unref the item while its event
+	signal is being emitted.  Do not propagate further if the item is
+	destroyed.
+
 	* gnome-canvas.c (emit_event): Remember the item's parent before
 	emitting the event signal, because the item may be destroyed
 	during emission.  This fixes an Important Bug(tm).
